<resources>
    <string name="app_name">DanamonTest</string>
    <string name="text_password">Password</string>
    <string name="text_email">Email</string>
    <string name="text_login">Login</string>
    <string name="text_footer_login">Don\'t have an account?</string>
    <string name="text_signup">Signup</string>
    <string name="text_username">Username</string>
    <string name="text_role">Select role</string>
    <string name="text_admin">Admin</string>
    <string name="text_user">Normal User</string>
    <string name="text_footer_register">Already have an account?</string>
    <string name="text_unknown">Unknown</string>
    <string name="text_empty_data">No data</string>
    <string name="text_wrong_password">Wrong password</string>
    <string name="text_username_error">Username is less than 6 character</string>
    <string name="text_email_error">Email not valid</string>
    <string name="text_password_error">Password is less than 6 character</string>
    <string name="text_login_success">Login Success</string>
    <string name="text_register_success">Register Success</string>
    <string name="text_update">Update</string>
    <string name="text_delete">Delete</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_confirmation">Are you sure?</string>
</resources>